# polars-cleanviz

./: .gitignore  LICENSE  README.md  notebook_benchmark.py  performance_results.json  pyproject.toml
demo/: performance_results.json  polarscope_demo.ipynb
pl_cleanviz/: __init__.py  plots.py  profiler.py  profiling.py  utils.py  xray.py
polarscope/: __init__.py  clean.py  datasets.py  plots.py  xray.py
tests/: performance_benchmark.py  test_comprehensive.py
