[project]
name = "polarscope"
version = "1.2.0"
description = "🔬 Professional data inspection and visualization toolkit for Polars - featuring advanced X-ray analysis, comprehensive plotting, and data quality assessment."
authors = [{ name = "Anders & Co." }]
requires-python = ">=3.9"
dependencies = [
  "polars>=0.20",
  "matplotlib>=3.7"
]
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
plotly = ["plotly>=5.20", "kaleido>=0.2"]
altair = ["altair>=5"]
seaborn = ["seaborn>=0.12"]
great_tables = ["great_tables>=0.10"]
scipy = ["scipy>=1.10"]
all = ["plotly>=5.20", "kaleido>=0.2", "altair>=5", "seaborn>=0.12", "great_tables>=0.10", "scipy>=1.10"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
polarscope = ["data/*.csv"]
